// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "bounds": Array [
    Array [
      10,
      20,
      0,
    ],
    Array [
      10,
      10,
      0,
    ],
    Array [
      20,
      20,
      0,
    ],
  ],
  "description": "Full region description",
  "name": "Full region",
  "pois": Array [
    Object {
      "coordinates": Array [
        10,
        12,
        0,
      ],
      "description": "pt 1 d",
      "kind": "other",
      "name": "pt 1",
    },
    Object {
      "coordinates": Array [
        33,
        34,
        0,
      ],
      "description": "pt 2 d",
      "kind": "take-out",
      "name": "pt 2",
    },
  ],
  "season": "season description",
  "seasonNumeric": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "0": Object {
    "message": "\\"name\\" length must be at least 3 characters long",
    "path": "region.name",
  },
  "1": Object {
    "message": "\\"0\\" must be less than or equal to 23",
    "path": "region.seasonNumeric.0",
  },
  "2": Object {
    "message": "\\"longitude\\" must be less than or equal to 180",
    "path": "region.bounds.0.0",
  },
  "3": Object {
    "message": "\\"latitude\\" must be less than or equal to 90",
    "path": "region.bounds.0.1",
  },
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "bounds": Array [
    Array [
      10,
      20,
      0,
    ],
    Array [
      10,
      10,
      0,
    ],
    Array [
      20,
      20,
      0,
    ],
  ],
  "description": "Full region description",
  "id": "bd3e10b6-7624-11e7-b5a5-be2e44b06b34",
  "name": "Full region",
  "pois": Array [
    Object {
      "coordinates": Array [
        10,
        12,
        0,
      ],
      "description": "pt 1 upd",
      "kind": "other",
      "name": "pt 1 u",
    },
    Object {
      "coordinates": Array [
        33,
        34,
        0,
      ],
      "description": "pt 2 upd",
      "kind": "take-out",
      "name": "pt 2 u",
    },
    Object {
      "coordinates": Array [
        1,
        2,
        3,
      ],
      "description": "r1p2 d",
      "kind": "put-in",
      "name": "r 1 p 2",
    },
  ],
  "season": "season description",
  "seasonNumeric": Array [
    1,
    2,
    3,
  ],
}
`;
